Remove text from signup page

--- a/src/app/signup/signup.page.html
+++ b/src/app/signup/signup.page.html
@@ -22,10 +22,10 @@
     <ion-button expand="round" color="secondary" (click)="signupWithEmail()">
       <span slot="end">sign up with your email</span>
     </ion-button>
-    <ion-item>
+    <!-- <ion-item>
       <ion-text text-center>By signing up with your email or facebok, you accept the <u class="secondary">T&C's </u>
         and <u class="secondary"> Privacy policy </u></ion-text>
-    </ion-item>
+    </ion-item> -->
 
   </div>
 </ion-content>
