Change currency to pound

--- a/src/app/checkbooking/checkbooking.page.html
+++ b/src/app/checkbooking/checkbooking.page.html
@@ -52,7 +52,7 @@
     <ion-text slot="end" class="totalText">{{totalPass}} * {{totalCost}}</ion-text>
   </ion-item>
   <ion-item margin-bottom>
-    <ion-text slot="end" class="totalText">Amount = ₹{{total}}</ion-text>
+    <ion-text slot="end" class="totalText">Amount = £{{total}}</ion-text>
   </ion-item>
   <div padding>
     <ion-button expand="block" color="secondary" (click)="goforbooking()">Book</ion-button>
