--- a/src/app/findridesearch-result/findridesearch-result.page.html
+++ b/src/app/findridesearch-result/findridesearch-result.page.html
@@ -48,7 +48,7 @@
         </ion-label>
         <ion-label>
           <ion-fab vertical="top" horizontal="end" slot="fixed">
-            <ion-note>₹ {{cards.cost}}</ion-note>
+            <ion-note>£ {{cards.cost}}</ion-note>
           </ion-fab>
 
           <ion-fab vertical="bottom" horizontal="end" slot="fixed">
