--- a/src/app/recommendedprice/recommendedprice.page.html
+++ b/src/app/recommendedprice/recommendedprice.page.html
@@ -17,7 +17,7 @@
   <div class="count">
     <ion-item>
       <ion-label text-center>
-        <ion-text class="moneyText"><span>₹</span>250.00</ion-text>
+        <ion-text class="moneyText"><span>£</span>250.00</ion-text>
         <p>{{pickup}} >> {{destination}}</p>
       </ion-label>
     </ion-item>
