--- a/src/app/ridedetails/ridedetails.page.html
+++ b/src/app/ridedetails/ridedetails.page.html
@@ -62,7 +62,7 @@
   <ion-item>
     <ion-text slot="start" class="seatsCount">4 seats available</ion-text>
     <ion-label slot="end">
-      <ion-text class="costPrice">₹ {{rideData.cost}}</ion-text>
+      <ion-text class="costPrice">£ {{rideData.cost}}</ion-text>
       <p>per seat</p>
     </ion-label>
   </ion-item>
