--- a/src/app/middleseat/middleseat.page.html
+++ b/src/app/middleseat/middleseat.page.html
@@ -8,9 +8,9 @@
 
 <ion-content>
   <div class="flex">
-    <div class="image_Div">
+    <!-- <div class="image_Div">
       <ion-img src="../../assets/image/passenger.jpg"></ion-img>
-    </div>
+    </div> -->
     <ion-list>
       <ion-item>
         <ion-label text-center>
