Change spell capitalization

--- a/src/app/findride/findride.page.html
+++ b/src/app/findride/findride.page.html
@@ -20,7 +20,7 @@
     <ion-item>
       <ion-icon slot="start" expand="icon-only" name="search"></ion-icon>
       <ion-label text-center>
-        <h2 color="dark">PIck Up Location</h2>
+        <h2 color="dark">PIck-Up location</h2>
         <p>{{pickupLoc}}</p>
       </ion-label>
     </ion-item>
@@ -30,7 +30,7 @@
     <ion-item>
       <ion-icon slot="start" expand="icon-only" name="search"></ion-icon>
       <ion-label text-center>
-        <h2 color="dark">Drop Off Location</h2>
+        <h2 color="dark">Drop Off location</h2>
         <p>{{destLoc}}</p>
       </ion-label>
     </ion-item>
@@ -41,7 +41,7 @@
     <ion-item>
       <ion-icon slot="start" expand="icon-only" name="search"></ion-icon>
       <ion-label text-center>
-        <h2 color="dark">Drop Off Location</h2>
+        <h2 color="dark">Drop Off location</h2>
         <p>{{destLoc}}</p>
       </ion-label>
     </ion-item>
@@ -51,7 +51,7 @@
     <ion-item class="mapcardItem">
       <ion-icon slot="start" expand="icon-only" name="search"></ion-icon>
       <ion-label text-center>
-        <h2 color="dark">PIck Up Location</h2>
+        <h2 color="dark">PIck-Up location</h2>
         <p>{{pickupLoc}}</p>
       </ion-label>
     </ion-item>
