Remove place placeholder text

--- a/src/app/pickup/pickup.page.html
+++ b/src/app/pickup/pickup.page.html
@@ -13,7 +13,7 @@
   <ion-item>
     <h1>Pick-up</h1>
   </ion-item>
-  <ion-searchbar placeholder="e.g Araria Bihar" class="background-transparent" [(ngModel)]="searchItem"
+  <ion-searchbar placeholder="" class="background-transparent" [(ngModel)]="searchItem"
     [showCancelButton]="true" (ionInput)="searcOnChnage()" (ionCancel)="dismiss()" selected="true" autofocus="true">
   </ion-searchbar>
 
