--- a/src/app/stopoverlocation/stopoverlocation.component.html
+++ b/src/app/stopoverlocation/stopoverlocation.component.html
@@ -5,7 +5,7 @@
         <ion-icon name="close" mode="md" expand="icon-only"> </ion-icon>
       </ion-button>
     </ion-buttons>
-    <ion-searchbar placeholder="e.g Araria Bihar" class="background-transparent" [(ngModel)]="searchItem"
+    <ion-searchbar placeholder="" class="background-transparent" [(ngModel)]="searchItem"
       [showCancelButton]="true" (ionInput)="searcOnChnage()" selected="true" autofocus="true">
     </ion-searchbar>
   </ion-toolbar>
