--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -20,12 +20,12 @@
   --ion-color-primary-tint: #4c8dff;
 
   /** secondary **/
-  --ion-color-secondary: #0cd1e8;
+  --ion-color-secondary: #c81912; //#0cd1e8;
   --ion-color-secondary-rgb: 12, 209, 232;
   --ion-color-secondary-contrast: #ffffff;
   --ion-color-secondary-contrast-rgb: 255, 255, 255;
-  --ion-color-secondary-shade: #0bb8cc;
-  --ion-color-secondary-tint: #24d6ea;
+  --ion-color-secondary-shade: #f64b3c; //#0bb8cc;
+  --ion-color-secondary-tint: #f64b3c;  //#24d6ea;
 
   /** tertiary **/
   --ion-color-tertiary: #3b5998;
