Fix issues in 2/28/2020

--- a/src/app/findride/findride.page.html
+++ b/src/app/findride/findride.page.html
@@ -20,7 +20,7 @@
     <ion-item>
       <ion-icon slot="start" expand="icon-only" name="search"></ion-icon>
       <ion-label text-center>
-        <h2 color="dark">PIck-Up Location</h2>
+        <h2 color="dark">Pick-Up Location</h2>
         <p>{{pickupLoc}}</p>
       </ion-label>
     </ion-item>
