--- a/src/app/findridesearch-result/findridesearch-result.page.html
+++ b/src/app/findridesearch-result/findridesearch-result.page.html
@@ -14,7 +14,7 @@
         <ion-text>
           <ion-icon name="arrow-forward" expand="icon-only"></ion-icon> {{destLoc}}
         </ion-text>
-        <p>{{date}} , {{time}}</p>
+        <!-- <p>{{date}} , {{time}}</p> -->
       </ion-label>
     </ion-item>
   </ion-list>
