--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -52,10 +52,10 @@ ion-card.rideComplete {
     color: #006064;
   }
 }
-ion-list-header {
-  background: rgb(12, 209, 232);
-  color: white;
-}
+// ion-list-header {
+//   background: rgb(12, 209, 232);
+//   color: white;
+// }
 
 ion-card.historyCards {
   --background: white;
