--- a/src/app/pickup/pickup.page.html
+++ b/src/app/pickup/pickup.page.html
@@ -11,7 +11,7 @@
 
 <ion-content>
   <ion-item>
-    <h1>Pick-up</h1>
+    <h1>Pick-Up</h1>
   </ion-item>
   <ion-searchbar placeholder="" class="background-transparent" [(ngModel)]="searchItem"
     [showCancelButton]="true" (ionInput)="searcOnChnage()" (ionCancel)="dismiss()" selected="true" autofocus="true">
