--- a/src/app/profile/profile.page.html
+++ b/src/app/profile/profile.page.html
@@ -16,10 +16,10 @@
   <ion-toolbar color="secondary">
     <ion-segment (ionChange)="segmentValue($event)">
       <ion-segment-button checked value="details">
-        <ion-label>details</ion-label>
+        <ion-label>Details</ion-label>
       </ion-segment-button>
       <ion-segment-button value="account">
-        <ion-label>account</ion-label>
+        <ion-label>Account</ion-label>
       </ion-segment-button>
     </ion-segment>
   </ion-toolbar>
