--- a/src/app/recommendedprice/recommendedprice.page.html
+++ b/src/app/recommendedprice/recommendedprice.page.html
@@ -24,7 +24,7 @@
     <ion-label>
       <ion-button mode="md" color="secondary" expand="block" (click)="askforReturn()">Continue</ion-button>
 
-      <ion-button mode="md" no-padding color="secondary" (click)="notAgree()" expand="block" fill="clear">i don't agree
+      <ion-button mode="md" no-padding color="secondary" (click)="notAgree()" expand="block" fill="clear">I don't agree
       </ion-button>
 
     </ion-label>
