Fix text issues. Remove notification in inbox

--- a/src/app/findride/findride.page.html
+++ b/src/app/findride/findride.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-text padding-start>Find a ride</ion-text>
+    <ion-text padding-start>Find a Ride</ion-text>
   </ion-toolbar>
 </ion-header>
 <ion-content>
@@ -20,7 +20,7 @@
     <ion-item>
       <ion-icon slot="start" expand="icon-only" name="search"></ion-icon>
       <ion-label text-center>
-        <h2 color="dark">Pick-Up Location</h2>
+        <h2 color="dark">Pick Up Location</h2>
         <p>{{pickupLoc}}</p>
       </ion-label>
     </ion-item>
@@ -30,7 +30,7 @@
     <ion-item>
       <ion-icon slot="start" expand="icon-only" name="search"></ion-icon>
       <ion-label text-center>
-        <h2 color="dark">Drop-Off Location</h2>
+        <h2 color="dark">Drop Off Location</h2>
         <p>{{destLoc}}</p>
       </ion-label>
     </ion-item>
@@ -41,7 +41,7 @@
     <ion-item>
       <ion-icon slot="start" expand="icon-only" name="search"></ion-icon>
       <ion-label text-center>
-        <h2 color="dark">Drop-Off Location</h2>
+        <h2 color="dark">Drop Off Location</h2>
         <p>{{destLoc}}</p>
       </ion-label>
     </ion-item>
@@ -51,7 +51,7 @@
     <ion-item class="mapcardItem">
       <ion-icon slot="start" expand="icon-only" name="search"></ion-icon>
       <ion-label text-center>
-        <h2 color="dark">Pick-Up Location</h2>
+        <h2 color="dark">Pick Up Location</h2>
         <p>{{pickupLoc}}</p>
       </ion-label>
     </ion-item>
