--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -37,8 +37,8 @@
 
 
   <div *ngIf="segmenValue == 'current' && !service.cardDetails" class="currentContent">
-    <h1 color="light">Going somewhere?</h1>
-    <ion-text color="light" margin-bottom text-center>Share your travel costs with our community.</ion-text>
+    <!-- <h1 color="light">Going somewhere?</h1> -->
+    <!-- <ion-text color="light" margin-bottom text-center>Share your travel costs with our community.</ion-text> -->
     <ion-button fill="solid" margin-bottom expand="round" color="secondary" (click)="gotoOfferaRide()" text-uppercase>
       offer a ride
     </ion-button>
