--- a/src/app/loginform/loginform.page.html
+++ b/src/app/loginform/loginform.page.html
@@ -30,7 +30,7 @@
 
 
     <ion-button expand="round" color="secondary" margin-top (click)="goforHome()">
-      <span slot="end">Login</span>
+      <span slot="end">Log In</span>
     </ion-button>
     <ion-text text-center color="secondary" (click)="goforForgotPassword()">Forgot your password?
     </ion-text>
@@ -39,7 +39,7 @@
 <ion-footer>
   <ion-toolbar>
     <ion-button expand="full" color="secondary" fill="clear" (click)="goforSignupPage()" >
-      <span slot="end">Not a member yet ? Join for free</span>
+      <span slot="end">Make an account</span>
     </ion-button>
   </ion-toolbar>
 </ion-footer>
