--- a/src/app/signup/signup.page.html
+++ b/src/app/signup/signup.page.html
@@ -32,7 +32,7 @@
 <ion-footer>
   <ion-toolbar>
     <ion-button expand="full" color="secondary" fill="clear" (click)="gotoLoginformHome()">
-      <span slot="end" >Already a member ? login</span>
+      <span slot="end" >Already a member? Log In</span>
     </ion-button>
   </ion-toolbar>
 </ion-footer>
