--- a/src/app/dropoff/dropoff.page.html
+++ b/src/app/dropoff/dropoff.page.html
@@ -11,7 +11,7 @@
 
 <ion-content>
   <ion-item>
-    <h1>Drop-off</h1>
+    <h1>Drop Off</h1>
   </ion-item>
   <ion-searchbar placeholder="" class="background-transparent" [(ngModel)]="searchItem"
     [showCancelButton]="true" (ionInput)="searcOnChnage()" (ionCancel)="dismiss()" selected="true" autofocus="true">
