--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -6,10 +6,10 @@
         <p class="title_center" text-uppercas>Carpool</p>
       </div>
     </div>
-    <ion-card-subtitle text-center text-capitalize padding>carpooling takes the trek out of the journey
+    <ion-card-subtitle text-center text-capitalize padding>Let’s ride together!
     </ion-card-subtitle>
     <ion-card-content class="button_row">
-      <ion-button fill="solid" margin-bottom expand="round" color="secondary" (click)="gotosignup()">Signup
+      <ion-button fill="solid" margin-bottom expand="round" color="secondary" (click)="gotosignup()">Sign Up
       </ion-button>
       <ion-button fill="clear" expand="round" color="secondary" (click)="gotoLoginformHome()">Log In
       </ion-button>
