Fix time format Remove some paragraphs

--- a/src/app/verifyemail/verifyemail.page.html
+++ b/src/app/verifyemail/verifyemail.page.html
@@ -39,7 +39,7 @@
 
     </div>
     <ion-item>
-      <ion-button expand="block" fill="clear" color="dark" class="full"> Send verifivcation email</ion-button>
+      <ion-button expand="block" fill="clear" color="dark" class="full"> Send verification email</ion-button>
     </ion-item>
 
   </ion-list>
