--- a/src/app/verifyphone/verifyphone.page.html
+++ b/src/app/verifyphone/verifyphone.page.html
@@ -13,7 +13,7 @@
   <ion-row>
     <ion-col size="4">
       <ion-item mode="md">
-        <ion-select [interfaceOptions]="customPopoverOptions" interface="popover" placeholder="IN+91"
+        <ion-select [interfaceOptions]="customPopoverOptions" interface="popover" placeholder="UK+44"
           [(ngModel)]="selectedValue" mode="ios">
           <ion-select-option *ngFor="let item of countryCode" value={{item.dial_code}} selected>{{item.name}}
           </ion-select-option>
@@ -30,11 +30,11 @@
     </ion-col>
   </ion-row>
   <div class="policyText" text-center>
-    <ion-text color="medium">
+    <!-- <ion-text color="medium">
       Tab Next to verify your account with Account Kit Powered by Facebook.You don't need a facebook account to use
       Account Kit.An SMS may be sent to verify your number.
       Message and data rates may apply.<u>Learn how facebook uses your info.</u>
-    </ion-text>
+    </ion-text> -->
     <ion-button mode="md" expand="full" color="secondary" margin-top (click)="gotVerification(inputValue,selectedValue)"
       [disabled]="inputValue == ''">Next
     </ion-button>
